--- a/styles/themes.scss
+++ b/styles/themes.scss
@@ -32,6 +32,12 @@
   --extra-purple-secondary: #{$extra--purple--secondary--light};
   --extra-purple-text: #{$extra--purple--text--light};
 
+  --subaura-orange-bg: #{$subaura--orange--bg--light};
+  --subaura-orange-card-bg: #{$subaura--orange--card--bg--light};
+  --subaura-orange-primary: #{$subaura--orange--primary--light};
+  --subaura-orange-secondary: #{$subaura--orange--secondary--light};
+  --subaura-orange-text: #{$subaura--orange--text--light};
+
   --grid-border-color: #{$grid--border--color--light};
 
   --wind-hover-bg: #{$wind-bg-20};
@@ -81,6 +87,12 @@
   --extra-purple-primary: #{$extra--purple--primary--dark};
   --extra-purple-secondary: #{$extra--purple--secondary--dark};
   --extra-purple-text: #{$extra--purple--text--dark};
+
+  --subaura-orange-bg: #{$subaura--orange--bg--dark};
+  --subaura-orange-card-bg: #{$subaura--orange--card--bg--dark};
+  --subaura-orange-primary: #{$subaura--orange--primary--dark};
+  --subaura-orange-secondary: #{$subaura--orange--secondary--dark};
+  --subaura-orange-text: #{$subaura--orange--text--dark};
 
   --grid-border-color: #{$grid--border--color--dark};
 
