--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -37,13 +37,22 @@ $grey-95: #fafafa;
 $grey-100: white;
 
 // Purple -- Additional Weapons
-$purple-00: #332f7c;
+$purple-00: #25224e;
 $purple-10: #4f3c79;
 $purple-20: #635fb7;
 $purple-30: #8c86ff;
 $purple-40: #7471c7;
 $purple-80: #d5d3f6;
 $purple-90: #ecebff;
+
+// Orange -- Subaura Summons
+$orange-00: #201710;
+$orange-10: #6b401b;
+$orange-30: #825b39;
+$orange-40: #925a2a;
+$orange-50: #a8703f;
+$orange-80: #facea7;
+$orange-90: #ffebd9;
 
 // Colors -- Interface
 $blue: #275dc5;
@@ -134,6 +143,17 @@ $extra--purple--card--bg--dark: $purple-40;
 $extra--purple--primary--dark: $purple-00;
 $extra--purple--secondary--dark: $purple-10;
 $extra--purple--text--dark: $purple-00;
+
+$subaura--orange--bg--light: $orange-90;
+$subaura--orange--card--bg--light: $orange-80;
+$subaura--orange--primary--light: $orange-30;
+$subaura--orange--secondary--light: $orange-50;
+$subaura--orange--text--light: $orange-30;
+$subaura--orange--bg--dark: $orange-10;
+$subaura--orange--card--bg--dark: $orange-30;
+$subaura--orange--primary--dark: $orange-00;
+$subaura--orange--secondary--dark: $orange-10;
+$subaura--orange--text--dark: $orange-00;
 
 $text--primary--color--light: $grey-30;
 $text--primary--color--dark: $grey-90;
